--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Thanks for submitting form</title>
+    <title>Submission Completed</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/fav_icon.png">
@@ -24,7 +24,7 @@
                 <p class="hint">We will contact you as soon as possible.</p>
             </div>
             <div class="buttons">
-                <button onclick="location.href='https://ashfaquehossainabir.github.io/contact-me/'" class="check-word">Go Back</button>
+                <button onclick="location.href='https://ashfaquehossainabir.vercel.app'" class="check-word">Go Back</button>
             </div>
         </div>
     </div>
